--- a/03-Bases/package.json
+++ b/03-Bases/package.json
@@ -4,7 +4,9 @@
   "description": "Primer test en Node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "echo Iniciando en modo desarrollo"
   },
   "author": "Edomocar",
   "license": "ISC"
