feat: add UUID generation and age calculation functionality
- Implemented UUID generation using the uuid package for unique identifiers in factory functions.
- Added age calculation feature using the get-age package based on birthdate.
- Created factory functions to build user objects with unique IDs and calculated ages.
- Developed plugins for UUID and age retrieval to streamline the process.
- Updated application files to utilize new functionalities and demonstrate usage.

--- a/03-Bases/package.json
+++ b/03-Bases/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/01-app.js",
-    "dev": "nodemon src/03-app.js",
+    "dev": "nodemon src/05-app.js",
     "start:dev": "node src/02-app.js"
   },
   "author": "Edomocar",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "get-age": "^1.0.1",
+    "uuid": "^13.0.0"
   }
 }
