--- a/03-Bases/package.json
+++ b/03-Bases/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "get-age": "^1.0.1",
     "uuid": "^13.0.0"
   }
